<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_profile_section">

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart_delete_confirm"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/bg_button_secondary"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogConfirm"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_button_primary"
            android:text="@string/cart_delete"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
